--- a/scss/sheets/_clock-keeper-sheet.scss
+++ b/scss/sheets/_clock-keeper-sheet.scss
@@ -177,6 +177,8 @@
                   select.clock-control-select {
                     text-indent: 0;
                     min-width: 40px;
+                    height: 16px;
+                    line-height: 16px;
                     -webkit-appearance: none;
                     -moz-appearance: none;
                     appearance: none;
