Moving animation logic to BladesDirector, added Tooltip Observer

--- a/scss/sheets/_clock-keeper-sheet.scss
+++ b/scss/sheets/_clock-keeper-sheet.scss
@@ -13,6 +13,7 @@
         position: relative;
         width: var(--icon-size);
         height: var(--icon-size);
+        min-width: var(--icon-size);
         line-height: unset;
         margin: 0 calc(var(--icon-size) / 8);
         text-shadow:
