--- a/templates/overlay/blades-overlay.hbs
+++ b/templates/overlay/blades-overlay.hbs
@@ -75,3 +75,5 @@
 <div id="notifications-overlay" class="overlay-section overlay-section-notifications"></div>
 
 <div id="transitions-overlay" class="overlay-section overlay-section-transitions"></div>
+
+<div id="tooltips-overlay" class="overlay-section overlay-section-tooltips"></div>
