--- a/scss/components/_clocks.scss
+++ b/scss/components/_clocks.scss
@@ -100,6 +100,7 @@
 }
 
 & {
+  --key-elem-square-size: 100px;
 
   $key-sizes: (
     1: (height: 836px, width: 230px, labelTop: -150px, clockSize: 169px),
@@ -243,9 +244,6 @@
 
     * { perspective: 500px; transform-style: preserve-3d; }
 
-    // background: rgba(255, 0, 255, 0.25);
-    // outline: 2px dotted rgb(255, 0, 255);
-
     @each $key, $labels in $label-positions {
       &[data-size="#{$key}"] {
 
@@ -289,12 +287,13 @@
       }
     }
 
+
     .clock-key {
 
       position: absolute;
       display: block;
-      height: 100px;
-      width: 100px;
+      height: var(--key-elem-square-size);
+      width: var(--key-elem-square-size);
 
       transform: translate(-50%, -50%);
       top: 50%;
@@ -315,6 +314,8 @@
       .key-image-container {
         height: var(--key-height);
         width: var(--key-width);
+
+
 
         .key-image {
           height: var(--key-height);
@@ -400,6 +401,8 @@
         height: 100%;
         width: 100%;
       }
+
+      .clock-one-segment { visibility: hidden; }
 
       .clock-frame { z-index: 5; }
       .clock-fill { z-index: 2; }
