--- a/templates/items/project-sheet.hbs
+++ b/templates/items/project-sheet.hbs
@@ -1,3 +1,4 @@
+{{eLog "Project Sheet Context" this}}
 <form class="{{cssClass}}" autocomplete="off">
 
   {{!-- Tags --}}
@@ -8,24 +9,18 @@
   {{!-- Sheet Container --}}
   <div class="sheet-root">
 
-    {{!-- <span id="marker-1" style="display: block; position: absolute; left: 0; top: 0; height: 10px; width: 10px; border-radius: 5px; background: magenta; z-index: 50; pointer-events: none; transform: translate(-50%, -50%)"></span>
-    <span id="marker-2" style="display: block; position: absolute; left: 50%; top: 50%; height: 10px; width: 10px; border-radius: 5px; background: yellow; z-index: 50; pointer-events: none; transform: translate(-50%, -50%)"></span>
-    <span id="marker-3" style="display: block; position: absolute; left: 100%; top: 100%; height: 10px; width: 10px; border-radius: 5px; background: cyan; z-index: 50; pointer-events: none; transform: translate(-50%, -50%)"></span>
-
-    <span id="marker-4" style="display: block; position: absolute; left: 481.5px; top: 105.88px; height: 10px; width: 10px; border-radius: 5px; background: blue; z-index: 50; pointer-events: none; transform: translate(-50%, -50%)"></span>
-    <span id="marker-5" style="display: block; position: absolute; left: 437.5px; top: 105.5px; height: 10px; width: 10px; border-radius: 5px; background: lime; z-index: 50; pointer-events: none; transform: translate(-50%, -50%)"></span> --}}
-
     {{!-- Header --}}
     <section class="sheet-top">
       <input class="sheet-title shadowed" type="text" name="name" value="{{item.name}}">
     </section>
 
-    {{!-- Clock Key --}}
-
 
     {{!-- Body --}}
     <div class="split-panel full-width flex-horizontal">
+      {{!-- Gradient Background  --}}
+      <div class="full-width gradient-background"></div>
 
+      {{!-- Left Panel: Project Details  --}}
       <section class="tab-content flex-vertical project-panel-left">
         {{#if (test isGM "||" isEmbeddedItem)}}
         <label class="tab-label">
@@ -56,13 +51,7 @@
         {{/if}}
       </section>
 
-      {{eLog "Project Sheet Context" this}}
-
-
-      <section class="clock-key-panel flex-horizontal project-panel-right">
-      {{> "systems/eunos-blades/templates/components/clock-key.hbs" item.clockKey}}
-    </section>
-
-    {{!-- <section class="sheet-footer-small"></section> --}}
-  </div>
+      {{!-- Right Panel: Clock Key Wrapper  --}}
+      <section class="clock-key-panel flex-horizontal project-panel-right"></section>
+    </div>
 </form>
