--- a/templates/roll/partials/roll-collab-action.hbs
+++ b/templates/roll/partials/roll-collab-action.hbs
@@ -255,8 +255,10 @@
   <div class="roll-sheet-float-block roll-opp-bg-img">
     {{#if rollClockKey}}
       {{> "systems/eunos-blades/templates/components/clock-key.hbs" rollClockKey}}
-    {{#elseif rollOpposition}}
-      <img src="{{rollOpposition.rollOppImg}}" />
+    {{else}}
+      {{#if rollOpposition}}
+        <img src="{{rollOpposition.rollOppImg}}" />
+      {{/if}}
     {{/if}}
   </div>
   <div class="roll-sheet-float-block roll-opp-bg-overlay">  </div>
