God sometimes I hate TypeScript

--- a/templates/chat/roll-result/action-acquireasset.hbs
+++ b/templates/chat/roll-result/action-acquireasset.hbs
@@ -2,7 +2,7 @@
 
 <div class="blades-roll roll-type-{{case "lower" rollType}} roll-result-{{rollResult}} roll-downtime-action-{{case "lower" rollDowntimeAction}}"
   data-chat-id="{{chatMsgID}}"
-  data-roll-id="{{rollID}}"
+  data-roll-id="{{id}}"
   data-user-id="{{flagData.rollUserID}}"
   data-primary-id="{{flagData.rollPrimaryData.rollPrimaryID}}"
   data-primary-type="{{flagData.rollPrimaryData.rollPrimaryType}}"
