--- a/templates/chat/roll-result/action-clock-recover.hbs
+++ b/templates/chat/roll-result/action-clock-recover.hbs
@@ -4,7 +4,7 @@
 
 <div class="blades-roll roll-type-{{case "lower" rollType}} roll-position-{{finalPosition}} roll-effect-{{finalEffect}} roll-result-{{rollResult}}"
   data-chat-id="{{chatMsgID}}"
-  data-roll-id="{{rollID}}"
+  data-roll-id="{{id}}"
   data-user-id="{{flagData.rollUserID}}"
   data-primary-id="{{flagData.rollPrimaryData.rollPrimaryID}}"
   data-primary-type="{{flagData.rollPrimaryData.rollPrimaryType}}"
