--- a/templates/chat/roll-result/action.hbs
+++ b/templates/chat/roll-result/action.hbs
@@ -1,7 +1,7 @@
 {{eLog "CHAT ACTION ROLL RESULT CONTEXT" this}}
 
 <div class="blades-roll roll-type-{{case "lower" rollType}} roll-position-{{finalPosition}} roll-effect-{{finalEffect}} roll-result-{{rollResult}}"
-  data-roll-id="{{rollID}}"
+  data-roll-id="{{id}}"
   data-user-id="{{rollUserID}}"
   data-primary-id="{{rollPrimaryData.rollPrimaryID}}"
   data-primary-type="{{rollPrimaryData.rollPrimaryType}}"
