--- a/templates/roll/partials/roll-collab-resistance.hbs
+++ b/templates/roll/partials/roll-collab-resistance.hbs
@@ -156,7 +156,7 @@
       <div class="roll-odds-label-text">Waiting For GM ...</div>
     </div>
     {{else if (test rollPhase "==" "AwaitingRoll")}}
-    <button class="roll-button" data-action="roll" data-roll-id="{{rollID}}">ROLL</button>
+    <button class="roll-button" data-action="roll" data-roll-id="{{id}}">ROLL</button>
     {{/if}}
   </div>
   {{#if costData}}
